--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+dj-database-url==0.5.0
 Django==2.2
 django-crispy-forms==1.12.0
 django-environ==0.4.5
+django-heroku==0.3.1
+psycopg2==2.9.1
 pytz==2021.1
 sqlparse==0.4.1
+whitenoise==5.2.0
